# Graphectory

./: .gitattributes  .gitignore  README.md  pyproject.toml
application/: sample_plan_violation.py
data/OpenHands/analysis/claude-sonnet-4/: trajectory_metrics.csv
data/OpenHands/analysis/deepseek-r1-0528/: trajectory_metrics.csv
data/SWE-agent/reports/: claude-sonnet-4.json  deepseek-r1-0528.json  devstral-small.json
docs/: GRAPH_FEATURES.md  PHASE_CODEBLOCK_GRAPH_FEATURES.md  PHASE_CODEBLOCK_GRAPH_V2_FEATURES.md
graph_analysis/: __init__.py  analyze_graph.py  analyzer.py  batch_runner.py  processor.py
graph_construction/: __init__.py  buildGraph.py  commandParser.py  generate_graphs.py  generate_json_graphs.py  generatejson.py  graph_renderer.js  graph_server.py  graph_template.html  live_graph_server.py  mapPhase.py  phaseCodeBlockGraph.py  plotly_renderer.py  styles.css  sweagentBuilder.py  swerebenchBuilder.py  swesmithBuilder.py  visualizer.py
graph_construction/server/: graph_builder.py  graph_renderer.py  handler.py
graph_construction/server/static/: browser.js  index.html  sankey.html
lang_construction/: generate_LCPs.py
plot/: openhands_resolution_pie.py
scripts/: README.md  check_feature_parity.py  compute_trajectory_stats.py  generate_phase_codeblock_graphs.py  generate_phase_codeblock_graphs_sweagent.py  generate_phase_codeblock_graphs_swerebench.py  generate_phase_codeblock_graphs_swesmith.py  make_swesmith_split_csv.py  process_all_trajectories.py  render_graph_figures.py  render_graph_html_plotly.py  run_graph_analysis.sh
(+3985 files in other folders)
